policies/imagepullpolicy-always/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: imagepullpolicy-always
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: imagepullpolicy-always
    rule: imagepullpolicy-always
    kind: Pod
    resources:
      - good-pod-latest-always
      - good-pod-pinned-ifnotpresent
      - good-pod-digest
    result: pass
  - policy: imagepullpolicy-always
    rule: imagepullpolicy-always
    kind: Pod
    resources:
      - bad-pod-latest-ifnotpresent
      - bad-pod-untagged-port
    result: fail
  - policy: imagepullpolicy-always
    rule: imagepullpolicy-always
    kind: Pod
    resources:
      - exempt-system-pod
    result: skip
